--- a/custom_tasks/inject-ca.yml
+++ b/custom_tasks/inject-ca.yml
@@ -17,7 +17,7 @@ run:
   - "-c"
   - |
     cat /var/version && echo ""
-    set -eux
+    cat /opt/resource/common.sh
 
     source /opt/resource/common.sh
 
